[package]
name = "chromoly"
version = "0.1.0"
edition = "2021"
ahtors = ["n01e0 <reoshiseki@gmail.com>"]
description = """
   ▄                                             ▄
    █▄▄▀█     ▄    ▄▄▄▄▄     ▄    ▄▄▄       ▀▄    █
   ▄▀   █      █▀▀▀    █      ▀▀█▀           █    █
  ▄▀   █       ▀▄     ▄▀     ▀▄▄█▄▄▀▀▀▀      █    █
     ▄▀         █ ▄▄▄▄█         █                █
   ▄▀           ▀▀     ▀         ▀▀▀▀▀         ▄▀

chrome protector
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version="3.2.6", features=["derive"] }
daemonize = "0.4.1"
env_logger = "0.9.0"
fanotify-rs = { git="https://github.com/n01e0/fanotify-rs" }
log = "0.4.17"
nix = "0.24.1"
procfs = "0.12.0"
procinfo = "0.4.2"
serde = { version="1.0.137", features=["derive"] }
serde_yaml = "0.8.24"
thiserror = "1.0.31"
tia = "1.0.3"
walkdir = "2.3.2"
which = "4.2.5"

[dev-dependencies]
color-backtrace = "0.5.1"
